fix: middleware auth
